# ProjectV

./: CMakeLists.txt  Editor_PRD.md  LICENSE  README.md
charisma-editor/: CMakeCache.txt  CMakeLists.txt  Makefile  charisma-editor  cmake_install.cmake  unit_tests
charisma-editor/.qt/: QtDeploySupport.cmake
charisma-editor/charisma-editor_autogen/: deps  mocs_compilation.cpp
charisma-editor/charisma-editor_autogen/UVLADIE3JM/: moc_event_editor_widget.cpp  moc_event_editor_widget.cpp.d  moc_faction_editor_widget.cpp  moc_faction_editor_widget.cpp.d  moc_lore_editor_widget.cpp.d  moc_main_window.cpp  moc_main_window.cpp.d  moc_map_editor_widget.cpp.d  moc_media_manager_widget.cpp  moc_media_manager_widget.cpp.d  moc_project_manager.cpp  moc_project_manager.cpp.d  moc_unit_editor_widget.cpp.d
charisma-editor/src/: event_editor_widget.cpp  event_editor_widget.h  faction_editor_widget.cpp  faction_editor_widget.h  lore_editor_widget.cpp  lore_editor_widget.h  main.cpp  main_window.cpp  main_window.h  map_editor_widget.cpp  map_editor_widget.h  media_manager_widget.cpp  media_manager_widget.h  project_manager.cpp  project_manager.h  unit_editor_widget.cpp  unit_editor_widget.h
charisma-editor/src/modules/faction/: faction_editor.cpp  faction_editor.h
charisma-editor/src/modules/map/: map_editor.cpp  map_editor.h
charisma-editor/src/modules/unit/: unit_editor.cpp  unit_editor.h
charisma-editor/tests/: test_project_manager.cpp
charisma-editor/unit_tests_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
charisma-editor/unit_tests_autogen/UVLADIE3JM/: moc_event_editor_widget.cpp.d  moc_faction_editor_widget.cpp.d  moc_lore_editor_widget.cpp  moc_lore_editor_widget.cpp.d  moc_main_window.cpp.d  moc_map_editor_widget.cpp  moc_map_editor_widget.cpp.d  moc_media_manager_widget.cpp.d  moc_project_manager.cpp.d  moc_unit_editor_widget.cpp  moc_unit_editor_widget.cpp.d
charisma-engine/: CMakeCache.txt  CMakeLists.txt  Makefile  charisma-engine  cmake_install.cmake
charisma-engine/src/: main.cpp  save_load_system.cpp  save_load_system.h
charisma-engine/src/ai/: ai_player.cpp  ai_player.h
charisma-engine/src/core/: game_loop.cpp  game_loop.h
charisma-engine/src/data/: data_loader.cpp  data_loader.h
charisma-engine/src/rendering/: renderer.cpp  renderer.h
